ajustes de scss

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -4,3 +4,6 @@ $gray: #999999;
 $dark-gray: #606060;
 $accent: #03afc2;
 $dark-blue: #223843;
+$light-green: rgb(180, 219, 187);
+$dark-green: rgb(1, 43, 71);
+$black: black;
