--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,6 +1,6 @@
 body {
    color: $gray;
-   font-family: $ff-s;
+   font-family: $ff-a;
    line-height: 1.6;
    background: white;
    font-size: .875rem;
