--- a/scss/partials/_all.scss
+++ b/scss/partials/_all.scss
@@ -1,8 +1,9 @@
 @import 'base';
+@import 'header'; 
 @import 'nav';
-@import 'welcome';
+@import 'welcome'; 
 @import 'intro';
 @import 'about-me';
 @import 'portfolio';
 @import 'contact';
-@import 'footer';
+@import 'footer';  
