--- a/scss/partials/_portfolio.scss
+++ b/scss/partials/_portfolio.scss
@@ -158,11 +158,11 @@
 }
 
 .header-two {
-   background-image: url(../img/portfolio-02.jpg);
+   background-image: url(../img/banheiro/banheiro_01.jpg);
 }
 
 .header-three {
-   background-image: url(../img/portfolio-03.jpg);
+   background-image: url(../img/closet/closet_01.jpg);
 }
 
 .header-four {
