--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,3 +1,7 @@
+* {
+   box-sizing: border-box;
+}
+
 body {
    color: $gray;
    font-family: $ff-a;
@@ -21,9 +25,10 @@ h1, h2, p {
 }
 
 h1 {
-   color: $accent;
+   color: $dark-green;
    line-height: 1;
    font-size: 3rem;
+   letter-spacing: .3rem;
 
    @include mq {
       font-size: 4.25rem;
