--- a/css/main.css
+++ b/css/main.css
@@ -314,7 +314,7 @@ body {
   background: white;
   font-size: .875rem;
   overflow-x: hidden; }
-  @media (min-width: 50em) {
+  @media (min-width: 55em) {
     body {
       font-size: 1.125rem; } }
 
@@ -330,7 +330,7 @@ h1 {
   line-height: 1;
   font-size: 3rem;
   letter-spacing: .3rem; }
-  @media (min-width: 50em) {
+  @media (min-width: 55em) {
     h1 {
       font-size: 4.25rem; } }
 
@@ -342,12 +342,12 @@ h2 {
   line-height: 1;
   font-weight: 400;
   font-family: "Roboto", sans-serif; }
-  @media (min-width: 50em) {
+  @media (min-width: 55em) {
     h2 {
       font-size: 3rem; } }
 
 header {
-  letter-spacing: .3rem;
+  letter-spacing: .2rem;
   background: #b4dbbb;
   color: #012b47;
   display: flex;
@@ -357,7 +357,8 @@ header {
   text-align: center;
   height: 100vh;
   gap: 50px;
-  font-weight: 700; }
+  font-weight: 700;
+  overflow: hidden; }
   header span {
     font-size: 1.5rem;
     display: block; }
@@ -366,7 +367,7 @@ header {
     flex-direction: column;
     gap: 15px;
     align-items: center; }
-  @media (min-width: 50em) {
+  @media (min-width: 55em) {
     header {
       flex-direction: row;
       justify-content: space-between;
@@ -382,12 +383,17 @@ header {
     margin: 0 auto;
     max-width: 15em;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 35px;
+    padding: 0;
     align-items: center;
     margin: 0; }
   header .social-icon {
     width: 40px;
-    height: 40px; }
+    height: 40px;
+    font-size: 1.1rem;
+    letter-spacing: 0;
+    font-weight: 400; }
     header .social-icon:hover {
       opacity: .8; }
 
@@ -401,6 +407,9 @@ header {
   outline: none; }
   .menu-button:hover {
     cursor: pointer; }
+  @media (min-width: 55em) {
+    .menu-button {
+      display: none; } }
 
 nav {
   max-width: 450px;
@@ -412,6 +421,19 @@ nav {
   z-index: 10;
   transform: translateX(-100%);
   transition: transform ease-out 250ms; }
+  @media (min-width: 55em) {
+    nav {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 80px;
+      max-width: 100vw;
+      margin: 0;
+      background: #b4dbbb;
+      position: sticky;
+      transform: translateX(0);
+      transition: none;
+      right: 0; } }
 
 nav ul {
   margin: 0;
@@ -423,6 +445,14 @@ nav ul {
   justify-content: space-evenly;
   align-items: stretch;
   background: #e8e9eb; }
+  @media (min-width: 55em) {
+    nav ul {
+      flex-direction: row;
+      height: auto;
+      background: none;
+      justify-content: center;
+      align-items: center;
+      gap: 1em; } }
 
 nav li {
   display: flex;
@@ -433,7 +463,16 @@ nav li {
   nav li:not(:last-of-type) {
     border-bottom: 1px solid #223843; }
   nav li:hover {
-    background: #03a6b8; }
+    background: #e3e4e6; }
+  @media (min-width: 55em) {
+    nav li {
+      height: auto;
+      font-size: 1rem; }
+      nav li:not(:last-of-type) {
+        border-bottom: none; }
+      nav li:hover {
+        color: rgba(180, 219, 187, 0.5);
+        background: none; } }
 
 nav a {
   font-size: 2.5em;
@@ -445,8 +484,11 @@ nav a {
   font-family: "Roboto", sans-serif;
   text-decoration: none;
   line-height: 0;
-  padding: 12.3vh 0;
+  padding: 8.3vh 0;
   width: 100%; }
+  @media (min-width: 55em) {
+    nav a {
+      font-size: 1.5em; } }
 
 .close-icon {
   display: none; }
@@ -482,7 +524,7 @@ nav a {
     color: #223843;
     line-height: 2;
     text-align: center; }
-    @media (min-width: 50em) {
+    @media (min-width: 55em) {
       .welcome h1 {
         font-size: 3vw; } }
     .welcome h1 span {
@@ -494,7 +536,7 @@ nav a {
       font-weight: 400;
       font-family: "Roboto", sans-serif;
       display: block; }
-      @media (min-width: 50em) {
+      @media (min-width: 55em) {
         .welcome h1 span {
           font-size: 11vw; } }
     .welcome h1::before, .welcome h1::after {
@@ -561,7 +603,7 @@ nav a {
 
 .about-title {
   color: #b4dbbb;
-  text-shadow: 2px 2px #000;
+  text-shadow: 2px 2px #0006;
   font-size: 2rem;
   margin-bottom: .25em;
   margin-top: .25em; }
@@ -578,7 +620,7 @@ nav a {
   .about-img {
     grid-column: port / img;
     grid-row: 1 / 2; }
-    @media (min-width: 50em) {
+    @media (min-width: 55em) {
       .about-img {
         grid-row: 1 / 4; } }
   .about-title {
@@ -587,16 +629,16 @@ nav a {
     align-self: end; }
   .about-subtitle {
     text-align: center; }
-    @media (min-width: 50em) {
+    @media (min-width: 55em) {
       .about-subtitle {
         grid-row: 2 / 3; } }
-  @media (min-width: 50em) {
+  @media (min-width: 55em) {
     .about-text {
       grid-row: 3 / 4; } }
   .about-subtitle,
   .about-text {
     grid-column: port / port; }
-    @media (min-width: 50em) {
+    @media (min-width: 55em) {
       .about-subtitle,
       .about-text {
         grid-column: image-end / port-end; } } }
@@ -618,38 +660,46 @@ nav a {
   overflow: hidden;
   flex: 1 1 20rem;
   margin: 0; }
+  .portfolio-item.featured .portfolio-title {
+    font-size: 2.2rem; }
+  .portfolio-item.featured .portfolio-link {
+    font-size: 1.2rem; }
+  .portfolio-item.featured .portfolio-desc {
+    font-size: 1.05rem; }
   .portfolio-item img {
     display: block; }
   .portfolio-item figcaption {
     position: absolute;
-    top: 100%;
+    top: 0;
     bottom: 0;
-    right: 100%;
+    right: 0;
     left: 0;
-    padding: 1.5em;
+    opacity: 0;
+    padding: 1em;
     background: rgba(0, 0, 0, 0.35);
     color: #fff;
     text-align: left;
     display: flex;
     flex-direction: column;
-    transition: all ease-in-out 250ms; }
+    transition: opacity ease-in 250ms; }
   .portfolio-item:hover figcaption,
   .portfolio-item:focus figcaption {
-    top: 0;
-    right: 0; }
+    opacity: 1; }
 
 .portfolio-title {
   color: #fff;
   font-size: 1rem;
-  margin-bottom: auto; }
+  margin-bottom: auto;
+  letter-spacing: .1rem; }
 
 .portfolio-desc {
-  display: none; }
+  display: none;
+  font-size: .9rem; }
 
 .portfolio-link {
   color: #fff;
   font-weight: 700;
-  font-size: .9rem;
+  font-size: 1rem;
   text-decoration: none;
   border-bottom: 2px solid #fff;
   align-self: flex-start; }
@@ -667,7 +717,7 @@ nav a {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: .2em; }
-    @media (min-width: 50em) {
+    @media (min-width: 55em) {
       .portfolio-items {
         grid-template-columns: repeat(4, 1fr);
         gap: .75em; } }
@@ -731,10 +781,16 @@ nav a {
   background-image: url(../img/closet/closet_01.jpg); }
 
 .header-four {
-  background-image: url(../img/portfolio-04.jpg); }
+  background-image: url(../img/infantil/infantil_01.jpg); }
 
 .header-five {
-  background-image: url(../img/portfolio-05.jpg); }
+  background-image: url(../img/lavanderia/lavanderia_01.jpg); }
+
+.header-six {
+  background-image: url(../img/documentos/documentos_01.jpg); }
+
+.header-seven {
+  background-image: url(../img/mudanca/mudanca_01.jpg); }
 
 .portfolio-title-box {
   background: rgba(0, 0, 0, 0.35);
@@ -765,7 +821,7 @@ nav a {
   margin: 0 auto;
   padding-bottom: 2em; }
 
-@media (min-width: 50em) {
+@media (min-width: 55em) {
   .portfolio-pull-left {
     width: 55%;
     float: left;
@@ -800,7 +856,7 @@ form {
   flex-direction: column;
   gap: 2em; }
   @supports (display: grid) {
-    @media (min-width: 50em) {
+    @media (min-width: 55em) {
       form {
         display: grid;
         grid-template-areas: "name    email" "message message" "   .    button"; }
@@ -904,8 +960,9 @@ footer {
 
 /* Tooltip text */
 .tooltip .tooltiptext {
+  font-size: 1rem;
   visibility: hidden;
-  width: 110px;
+  width: 120px;
   background-color: white;
   border: 1px solid #999999;
   color: black;
@@ -914,9 +971,9 @@ footer {
   border-radius: 6px;
   /* Position the tooltip text - see examples below! */
   position: absolute;
-  bottom: 110%;
+  bottom: 120%;
   left: 50%;
-  margin-left: -55px;
+  margin-left: -60px;
   z-index: 1; }
 
 /* Show the tooltip text when you mouse over the tooltip container */
