--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -9,6 +9,10 @@
    &:hover{
       cursor: pointer;
    }
+
+   @include mq {
+      display: none;
+   }
 }
 
 nav {
@@ -22,6 +26,20 @@ nav {
 
    transform: translateX(-100%);
    transition: transform ease-out 250ms;
+
+   @include mq {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 80px;
+      max-width: 100vw;
+      margin: 0;
+      background: $light-green;
+      position: sticky;
+      transform: translateX(0);
+      transition: none;
+      right: 0;
+   }
 }
 
 nav ul {
@@ -34,6 +52,15 @@ nav ul {
    justify-content: space-evenly;
    align-items: stretch;
    background: $light-gray;
+
+   @include mq {
+      flex-direction: row;
+      height: auto;
+      background: none;
+      justify-content: center;
+      align-items: center;
+      gap: 1em;
+   }
 }
 
 nav li {
@@ -48,7 +75,21 @@ nav li {
    }
 
    &:hover {
-      background: darken($accent, 2%);
+      background: darken($light-gray, 2%);
+   }
+
+   @include mq {
+      height: auto;
+      font-size: 1rem;
+
+      &:not(:last-of-type) {
+         border-bottom: none;
+      }
+   
+      &:hover {
+         color: rgba($light-green, .5);
+         background: none;
+      }
    }
 }
 
@@ -56,8 +97,12 @@ nav a {
    @include sans-serif($fs: 2.5em, $color: $dark-blue);
    text-decoration: none;
    line-height: 0;
-   padding: 12.3vh 0;
+   padding: 8.3vh 0;
    width: 100%;
+
+   @include mq {
+      font-size: 1.5em;
+   }
 }
 
 .close-icon {
