--- a/css/main.css
+++ b/css/main.css
@@ -448,11 +448,11 @@ nav ul {
   @media (min-width: 55em) {
     nav ul {
       flex-direction: row;
-      height: auto;
+      height: 80px;
       background: none;
       justify-content: center;
       align-items: center;
-      gap: 1em; } }
+      gap: 1.5em; } }
 
 nav li {
   display: flex;
@@ -466,12 +466,11 @@ nav li {
     background: #e3e4e6; }
   @media (min-width: 55em) {
     nav li {
-      height: auto;
+      height: fit-content;
       font-size: 1rem; }
       nav li:not(:last-of-type) {
         border-bottom: none; }
       nav li:hover {
-        color: rgba(180, 219, 187, 0.5);
         background: none; } }
 
 nav a {
@@ -488,7 +487,12 @@ nav a {
   width: 100%; }
   @media (min-width: 55em) {
     nav a {
-      font-size: 1.5em; } }
+      font-size: 1.5em;
+      height: 80px;
+      padding: 40px 0;
+      letter-spacing: 0; }
+      nav a:hover {
+        opacity: .7; } }
 
 .close-icon {
   display: none; }
@@ -889,7 +893,6 @@ textarea {
 .button {
   display: inline-block;
   border-radius: 8px;
-  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.5);
   width: auto;
   margin-top: .5em;
   padding: .35em 1.5em;
@@ -901,17 +904,51 @@ textarea {
   text-transform: uppercase;
   line-height: 1;
   font-weight: 400;
-  font-family: "Roboto", sans-serif; }
+  font-family: "Roboto", sans-serif;
+  transition: all ease-out 200ms; }
   .button:hover {
     cursor: pointer;
-    background: #01375b; }
+    background: #01375b;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5); }
+
+#status {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60%;
+  max-width: 500px;
+  text-align: center;
+  padding: 10px;
+  margin: 0 auto;
+  border-radius: 8px;
+  font-size: 1rem;
+  color: #fff; }
+
+#status.success {
+  background-color: green;
+  animation: status 4s ease forwards; }
+
+#status.error {
+  background-color: red;
+  animation: status 4s ease forwards; }
+
+@keyframes status {
+  0% {
+    opacity: 1;
+    pointer-events: all; }
+  90% {
+    opacity: 1;
+    pointer-events: all; }
+  100% {
+    opacity: 0;
+    pointer-events: none; } }
 
 footer {
   background-color: #b4dbbb;
   padding: 5em 0;
   text-align: center;
   color: #012b47; }
-  @media (min-width: 60em) {
+  @media (min-width: 55em) {
     footer {
       display: flex;
       padding: 2em 3em;
@@ -926,7 +963,7 @@ footer {
   display: flex;
   justify-content: space-between;
   margin: 1.75em auto 4em; }
-  @media (min-width: 60em) {
+  @media (min-width: 55em) {
     .social-icons {
       margin: 0 auto 0 2em;
       padding-right: 4em;
@@ -938,7 +975,7 @@ footer {
   .social-icon:hover {
     opacity: .8; }
 
-@media (min-width: 60em) {
+@media (min-width: 55em) {
   .copyright {
     margin: 0; } }
 
@@ -949,7 +986,7 @@ footer {
   background: rgba(1, 43, 71, 0.2);
   margin: 4em auto;
   width: 25%; }
-  @media (min-width: 60em) {
+  @media (min-width: 55em) {
     .copyright::before {
       display: none; } }
 
