--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -55,11 +55,11 @@ nav ul {
 
    @include mq {
       flex-direction: row;
-      height: auto;
+      height: 80px;
       background: none;
       justify-content: center;
       align-items: center;
-      gap: 1em;
+      gap: 1.5em;
    }
 }
 
@@ -79,7 +79,7 @@ nav li {
    }
 
    @include mq {
-      height: auto;
+      height: fit-content;
       font-size: 1rem;
 
       &:not(:last-of-type) {
@@ -87,7 +87,6 @@ nav li {
       }
    
       &:hover {
-         color: rgba($light-green, .5);
          background: none;
       }
    }
@@ -102,6 +101,13 @@ nav a {
 
    @include mq {
       font-size: 1.5em;
+      height: 80px;
+      padding: 40px 0;
+      letter-spacing: 0;
+
+      &:hover {
+         opacity: .7;
+      }
    }
 }
 
