--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -22,6 +22,7 @@ header {
       flex-direction: column;
       gap: 15px;
       align-items: center;
+      padding: 0 3vw;
    }
 
    @include mq {
