alterando cores e trocando o logo por svg

--- a/scss/partials/_all.scss
+++ b/scss/partials/_all.scss
@@ -3,7 +3,8 @@
 @import 'nav';
 @import 'welcome'; 
 @import 'intro';
-@import 'about-me';  
-@import 'portfolio';        
+@import 'about-me';       
+@import 'portfolio';             
 @import 'contact';
-@import 'footer'; 
+@import 'footer';                    
+@import 'carousel';  
