--- a/css/main.css
+++ b/css/main.css
@@ -329,7 +329,7 @@ a:hover {
   color: initial; }
 
 h1 {
-  color: #012b47;
+  color: #002a36;
   line-height: 1;
   font-size: 3rem;
   letter-spacing: .3rem; }
@@ -352,22 +352,25 @@ h2 {
 header {
   letter-spacing: .2rem;
   background: #b4dbbb;
-  color: #012b47;
+  color: #002a36;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   padding: 30px;
   text-align: center;
   height: 100vh;
-  gap: 50px;
   font-weight: 700;
   overflow: hidden; }
   header span {
     font-size: 1.5rem;
     display: block; }
   header .contact-info {
+    width: 350px;
+    height: 180px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 15px;
     align-items: center;
     padding: 0 3vw; }
@@ -380,8 +383,11 @@ header {
         min-width: 25vw;
         max-width: 30vw; } }
   header .logo {
-    width: 300px;
-    height: 300px; }
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 350px;
+    height: 180px; }
   header .social-icons {
     width: 90%;
     margin: 0 auto;
@@ -422,7 +428,7 @@ nav {
   bottom: 0;
   left: 0;
   right: 20vw;
-  z-index: 10;
+  z-index: 20;
   transform: translateX(-100%);
   transition: transform ease-out 250ms; }
   @media (min-width: 55em) {
@@ -457,7 +463,7 @@ nav ul {
       justify-content: center;
       align-items: center;
       gap: 5vw;
-      border-top: 3px solid #012b47;
+      border-top: 3px solid #002a36;
       box-sizing: content-box; } }
 
 nav li {
@@ -834,11 +840,6 @@ nav a {
   width: 85%;
   margin: 0 auto;
   padding-bottom: 2em; }
-  @media (min-width: 55em) {
-    .portfolio-content {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px; } }
 
 @media (min-width: 55em) {
   .portfolio-pull-left {
@@ -911,7 +912,7 @@ textarea {
   width: auto;
   margin-top: .5em;
   padding: .35em 1.5em;
-  background: #012b47;
+  background: #002a36;
   border: none;
   font-size: 2rem;
   letter-spacing: 0.15em;
@@ -923,7 +924,7 @@ textarea {
   transition: all ease-out 200ms; }
   .button:hover {
     cursor: pointer;
-    background: #01375b;
+    background: #003a4a;
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.7); }
 
 #status {
@@ -962,7 +963,7 @@ footer {
   background-color: #b4dbbb;
   padding: 5em 0;
   text-align: center;
-  color: #012b47; }
+  color: #002a36; }
   @media (min-width: 55em) {
     footer {
       display: flex;
@@ -985,7 +986,9 @@ footer {
 
 .social-icon {
   width: 25%;
-  height: 25%; }
+  height: 25%;
+  opacity: 1;
+  z-index: inherit; }
   .social-icon:hover {
     opacity: .8; }
 
@@ -997,7 +1000,7 @@ footer {
   content: '';
   display: block;
   height: 1px;
-  background: rgba(1, 43, 71, 0.2);
+  background: rgba(0, 42, 54, 0.2);
   margin: 4em auto;
   width: 25%; }
   @media (min-width: 55em) {
@@ -1031,3 +1034,42 @@ footer {
 .tooltip:hover .tooltiptext {
   visibility: visible;
   transition: visibility ease-in-out 250ms; }
+
+#modal-1,
+#modal-2,
+#modal-3,
+#modal-4,
+#modal-5,
+#modal-6,
+#modal-7 {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 100%;
+  overflow: hidden; }
+  @media (min-width: 55em) {
+    #modal-1,
+    #modal-2,
+    #modal-3,
+    #modal-4,
+    #modal-5,
+    #modal-6,
+    #modal-7 {
+      display: flex; } }
+  #modal-1 img,
+  #modal-2 img,
+  #modal-3 img,
+  #modal-4 img,
+  #modal-5 img,
+  #modal-6 img,
+  #modal-7 img {
+    object-fit: cover; }
+
+.not-carousel {
+  display: flex;
+  flex-direction: column;
+  gap: 15px; }
+  @media (min-width: 55em) {
+    .not-carousel {
+      display: none; } }
