adicionando section de dicas vindas do instagram

--- a/scss/partials/_all.scss
+++ b/scss/partials/_all.scss
@@ -3,8 +3,9 @@
 @import 'nav';
 @import 'welcome'; 
 @import 'intro';
-@import 'about-me';       
+@import 'about-me';           
 @import 'portfolio';             
-@import 'contact';
+@import 'contact';     
 @import 'footer';                    
-@import 'carousel';  
+@import 'carousel';           
+@import 'tips';       
