--- a/css/main.css
+++ b/css/main.css
@@ -1073,3 +1073,16 @@ footer {
   @media (min-width: 55em) {
     .not-carousel {
       display: none; } }
+
+.tips {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  padding: 4em 1.2em;
+  width: 100vw;
+  background: #b4dbbb; }
+  .tips iframe {
+    max-width: 50em;
+    outline: none; }
