--- a/css/main.css
+++ b/css/main.css
@@ -405,7 +405,7 @@ header {
     letter-spacing: 0;
     font-weight: 400; }
     header .social-icon:hover {
-      opacity: .8; }
+      opacity: .9; }
 
 .menu-button {
   z-index: 20;
@@ -584,15 +584,16 @@ nav a {
   @supports (display: grid) {
     .intro {
       display: grid;
-      grid-template-columns: minmax(5em, 1fr) minmax(auto, 20em) minmax(5em, 1fr); } }
+      grid-template-columns: minmax(5em, 1fr) minmax(auto, 22em) minmax(5em, 1fr); }
+      @media (min-width: 55em) {
+        .intro {
+          grid-template-columns: minmax(5em, 1fr) minmax(5em, 1fr) minmax(5em, 1fr); } } }
 
 .intro-middle {
   background: black;
-  padding: 1em;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
+  padding: 1em; }
+  .intro-middle img {
+    object-fit: cover; }
 
 .intro-left img,
 .intro-right img {
@@ -662,7 +663,7 @@ nav a {
 
 .portfolio {
   text-align: center;
-  background: #e8e9eb;
+  background: #fff;
   padding: 5em 0; }
 
 .portfolio-items {
@@ -967,7 +968,7 @@ footer {
   @media (min-width: 55em) {
     footer {
       display: flex;
-      padding: 2em 3em;
+      padding: 2em 5em;
       align-items: center; }
       footer p {
         margin: 0; } }
@@ -990,7 +991,7 @@ footer {
   opacity: 1;
   z-index: inherit; }
   .social-icon:hover {
-    opacity: .8; }
+    opacity: .9; }
 
 @media (min-width: 55em) {
   .copyright {
@@ -1032,8 +1033,7 @@ footer {
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
-  visibility: visible;
-  transition: visibility ease-in-out 250ms; }
+  visibility: visible; }
 
 #modal-1,
 #modal-2,
@@ -1084,5 +1084,25 @@ footer {
   width: 100vw;
   background: #b4dbbb; }
   .tips iframe {
-    max-width: 50em;
+    max-width: 65em;
     outline: none; }
+
+@media (min-width: 55em) {
+  .lightwidget-widget-mobile {
+    display: none; } }
+
+.lightwidget-widget-mq {
+  display: none; }
+  @media (min-width: 55em) {
+    .lightwidget-widget-mq {
+      display: block; } }
+
+.work {
+  display: flex;
+  padding: 5em;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: center;
+  height: 100vh;
+  max-width: 100vw;
+  background: #b4dbbb; }
