estilizando fonte no header

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -9,7 +9,7 @@ header {
    padding: 30px;
    text-align: center;
    height: 100vh;
-   font-weight: $fw-b;
+   // font-weight: $fw-b;
    overflow: hidden;
 
    span {
