--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,7 @@ template {
   box-sizing: border-box; }
 
 body {
-  color: #999999;
+  color: #002a36;
   font-family: "Archivo", sans-serif;
   line-height: 1.6;
   background: white;
@@ -359,7 +359,7 @@ header {
   align-items: center;
   padding: 30px;
   text-align: center;
-  height: 100vh;
+  height: 72vh;
   overflow: hidden; }
   header span {
     font-size: 1.5rem;
@@ -568,38 +568,10 @@ nav a {
 
 .intro {
   display: flex;
-  color: rgba(255, 255, 255, 0.7); }
-  .intro h2 {
-    color: #fff;
-    font-weight: 400;
-    line-height: 1.4em; }
-    .intro h2::after {
-      content: '';
-      width: 35%;
-      height: 1px;
-      background: rgba(255, 255, 255, 0.5);
-      display: block;
-      margin: 1em auto 0; }
-  @supports (display: grid) {
-    .intro {
-      display: grid;
-      grid-template-columns: minmax(5em, 1fr) minmax(auto, 22em) minmax(5em, 1fr); }
-      @media (min-width: 55em) {
-        .intro {
-          grid-template-columns: minmax(5em, 1fr) minmax(5em, 1fr) minmax(5em, 1fr); } } }
-
-.intro-middle {
-  background: black;
-  padding: 1em; }
-  .intro-middle img {
+  max-height: 100vh;
+  overflow-y: hidden; }
+  .intro img {
     object-fit: cover; }
-
-.intro-left img,
-.intro-right img {
-  object-fit: cover;
-  min-height: 100%;
-  min-width: 100%;
-  display: block; }
 
 .about-me {
   width: 90%;
@@ -610,13 +582,30 @@ nav a {
     content: '';
     display: block;
     clear: both; }
+  .about-me .button {
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 8px;
+    width: auto;
+    margin-top: .5em;
+    padding: .35em 1.5em;
+    background: #002a36;
+    border: none;
+    font-size: 2rem;
+    letter-spacing: 0.15em;
+    color: white;
+    text-transform: uppercase;
+    line-height: 1;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+    transition: all ease-out 200ms; }
+    .about-me .button:hover {
+      cursor: pointer;
+      background: #003a4a;
+      box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.7); }
 
 .about-img {
   max-height: 25em; }
-  @media (min-width: 42em) {
-    .about-img {
-      float: left;
-      margin-right: 1em; } }
 
 .about-title {
   color: #b4dbbb;
@@ -624,6 +613,9 @@ nav a {
   font-size: 2rem;
   margin-bottom: .25em;
   margin-top: .25em; }
+  @media (min-width: 55em) {
+    .about-title {
+      font-size: 3rem; } }
 
 .about-subtitle {
   font-size: 1.5rem;
@@ -637,28 +629,15 @@ nav a {
   .about-img {
     grid-column: port / img;
     grid-row: 1 / 2; }
-    @media (min-width: 55em) {
-      .about-img {
-        grid-row: 1 / 4; } }
   .about-title {
     grid-column: name / port;
     grid-row: 1 / 2;
     align-self: end; }
   .about-subtitle {
     text-align: center; }
-    @media (min-width: 55em) {
-      .about-subtitle {
-        grid-row: 2 / 3; } }
-  @media (min-width: 55em) {
-    .about-text {
-      grid-row: 3 / 4; } }
   .about-subtitle,
   .about-text {
-    grid-column: port / port; }
-    @media (min-width: 55em) {
-      .about-subtitle,
-      .about-text {
-        grid-column: image-end / port-end; } } }
+    grid-column: port / port; } }
 
 .portfolio {
   text-align: center;
@@ -910,6 +889,7 @@ textarea {
   display: inline-block;
   border-radius: 8px;
   width: auto;
+  max-width: 100%;
   margin-top: .5em;
   padding: .35em 1.5em;
   background: #002a36;
@@ -1098,10 +1078,19 @@ footer {
 
 .work {
   display: flex;
+  flex-direction: column;
   padding: 5em;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
   text-align: center;
-  height: 100vh;
+  height: auto;
   max-width: 100vw;
   background: #b4dbbb; }
+  .work .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px; }
+    .work .content a:hover {
+      color: #fff; }
