--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -6,4 +6,5 @@ $accent: #03afc2;
 $dark-blue: #223843;
 $light-green: rgb(180, 219, 187);
 $dark-green: rgb(0, 42, 54);
+// $dark-green: #4f7344;
 $black: black;
