--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -64,6 +64,7 @@ textarea {
    display: inline-block;
    border-radius: 8px;
    width: auto;
+   max-width: 100%;
    margin-top: .5em;
    padding: .35em 1.5em;
    background: $dark-green;
