--- a/scss/partials/_work.scss
+++ b/scss/partials/_work.scss
@@ -1,10 +1,23 @@
 .work {
    display: flex;
+   flex-direction: column;
    padding: 5em;
-   justify-content: center;
-   align-items: flex-start;
+   justify-content: space-between;
+   align-items: center;
    text-align: center;
-   height: 100vh;
+   height: auto;
    max-width: 100vw;
    background: $light-green;
+
+   .content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 20px;
+
+      a:hover {
+         color: #fff;
+      }
+   }
 }
