--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -4,7 +4,7 @@ $gray: #999999;
 $dark-gray: #606060;
 $accent: #03afc2;
 $dark-blue: #223843;
-$light-green: rgb(180, 219, 187);
-$dark-green: rgb(0, 42, 54);
+$light-green: #B4DBBB;
+$dark-green: #012A36;
 // $dark-green: #4f7344;
 $black: black;
