--- a/scss/partials/_work.scss
+++ b/scss/partials/_work.scss
@@ -9,15 +9,14 @@
    max-width: 100vw;
    background: $light-green;
 
-   .content {
+   .card {
+      width: 310px;
+      transform: translateX(-50%);
+   }
+
+   .carousel-inner {
       display: flex;
       justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 20px;
-
-      a:hover {
-         color: #fff;
-      }
+      width: 80vw;
    }
 }
