--- a/css/main.css
+++ b/css/main.css
@@ -309,10 +309,10 @@ template {
 
 body {
   color: #012A36;
-  font-family: "Archivo", sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.6;
   background: white;
-  font-size: .875rem;
+  font-size: .95rem;
   overflow-x: hidden; }
   @media (min-width: 55em) {
     body {
@@ -472,7 +472,7 @@ nav li {
   height: calc(100vh / 6);
   text-align: center; }
   nav li:not(:last-of-type) {
-    border-bottom: 1px solid #223843; }
+    border-bottom: 1px solid #012A36; }
   nav li:hover {
     background: #e3e4e6; }
   @media (min-width: 55em) {
@@ -487,7 +487,7 @@ nav li {
 nav a {
   font-size: 2.5em;
   letter-spacing: 0.15em;
-  color: #223843;
+  color: #012A36;
   text-transform: uppercase;
   line-height: 1;
   font-weight: 400;
@@ -526,46 +526,6 @@ nav a {
 .nav-is-open .close-icon {
   display: block; }
 
-.welcome {
-  background-image: url(../img/home/perfil_02.png);
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative; }
-  .welcome h1 {
-    font-size: 1.5rem;
-    font-weight: 400;
-    color: #223843;
-    line-height: 2;
-    text-align: center; }
-    @media (min-width: 55em) {
-      .welcome h1 {
-        font-size: 3vw; } }
-    .welcome h1 span {
-      font-size: 5.5rem;
-      letter-spacing: 0.15em;
-      color: #03afc2;
-      text-transform: uppercase;
-      line-height: 1;
-      font-weight: 400;
-      font-family: "Roboto", sans-serif;
-      display: block; }
-      @media (min-width: 55em) {
-        .welcome h1 span {
-          font-size: 11vw; } }
-    .welcome h1::before, .welcome h1::after {
-      content: '';
-      display: block;
-      width: 60%;
-      height: 1px;
-      background: #223843; }
-    .welcome h1::before {
-      margin: 0 auto 2em; }
-    .welcome h1::after {
-      margin: 2em auto 0; }
-
 .intro {
   display: flex;
   max-height: 100vh;
@@ -582,27 +542,6 @@ nav a {
     content: '';
     display: block;
     clear: both; }
-  .about-me .button {
-    display: inline-block;
-    text-decoration: none;
-    border-radius: 8px;
-    width: auto;
-    margin-top: .5em;
-    padding: .35em;
-    background: #012A36;
-    border: none;
-    font-size: 2rem;
-    letter-spacing: 0.15em;
-    color: white;
-    text-transform: uppercase;
-    line-height: 1;
-    font-weight: 400;
-    font-family: "Roboto", sans-serif;
-    transition: all ease-out 200ms; }
-    .about-me .button:hover {
-      cursor: pointer;
-      background: #013a4a;
-      box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.7); }
 
 .about-img {
   max-height: 25em; }
@@ -610,8 +549,8 @@ nav a {
 .about-title {
   color: #012A36;
   font-weight: 700;
-  text-shadow: 3px 3px #fff6;
-  font-size: 2rem;
+  text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff;
+  font-size: 2.2rem;
   margin-bottom: .25em;
   margin-top: .25em; }
   @media (min-width: 55em) {
@@ -661,8 +600,6 @@ nav a {
     font-size: 2.2rem; }
   .portfolio-item.featured .portfolio-link {
     font-size: 1.2rem; }
-  .portfolio-item.featured .portfolio-desc {
-    font-size: 1.05rem; }
   .portfolio-item img {
     display: block; }
   .portfolio-item figcaption {
@@ -689,10 +626,6 @@ nav a {
   margin-bottom: auto;
   letter-spacing: .1rem; }
 
-.portfolio-desc {
-  display: none;
-  font-size: .9rem; }
-
 .portfolio-link {
   color: #fff;
   font-weight: 700;
@@ -703,8 +636,6 @@ nav a {
   .portfolio-link:hover {
     color: #fff;
     opacity: .7; }
-  .featured .portfolio-link {
-    font-size: 1.1rem; }
   .portfolio-link::after {
     content: url(../img/arrow-white.svg);
     display: inline-block;
@@ -720,16 +651,7 @@ nav a {
     @media (min-width: 55em) {
       .portfolio-items {
         grid-template-columns: repeat(4, 1fr);
-        gap: .75em; } }
-  .portfolio-item.featured {
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 2; }
-  .featured .portfolio-title {
-    font-size: 2rem; }
-  .featured .portfolio-desc {
-    display: block; }
-  .featured .portfolio-link {
-    font-size: 1.1rem; } }
+        gap: .75em; } } }
 
 .portfolio-modal {
   position: fixed;
@@ -766,10 +688,6 @@ nav a {
   margin-bottom: 2em;
   background-size: cover;
   background-position: center; }
-
-.portfolio-pull-left,
-.portfolio-pull-right {
-  margin: 2em 0; }
 
 .header-one {
   background-image: url(../img/cozinha/cozinha_01.jpg); }
@@ -821,16 +739,6 @@ nav a {
   margin: 0 auto;
   margin-top: 2em;
   padding-bottom: 2em; }
-
-@media (min-width: 55em) {
-  .portfolio-pull-left {
-    width: 55%;
-    float: left;
-    margin-right: 2em; }
-  .portfolio-pull-right {
-    width: 55%;
-    float: right;
-    margin-left: 2em; } }
 
 @keyframes modalIn {
   0% {
