--- a/scss/partials/_about-me.scss
+++ b/scss/partials/_about-me.scss
@@ -3,25 +3,6 @@
    @include clearfix;
 
    padding: 5em 0;
-
-   .button {
-      display: inline-block;
-      text-decoration: none;
-      border-radius: 8px;
-      width: auto;
-      margin-top: .5em;
-      padding: .35em;
-      background: $dark-green;
-      border: none;
-      @include sans-serif($fs: 2rem, $color:white);
-      transition: all ease-out 200ms;
-   
-      &:hover {
-         cursor: pointer;
-         background: lighten($dark-green, 4%);
-         box-shadow: 0 0 5px 2px rgba(0, 0, 0, .7);
-      }
-   }
 }
 
 .about-img {
@@ -31,8 +12,8 @@
 .about-title {
    color: $dark-green;
    font-weight: $fw-b;
-   text-shadow: 3px 3px #fff6;
-   font-size: 2rem;
+   text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff;
+   font-size: 2.2rem;
    margin-bottom: .25em;
    margin-top: .25em;
 
